# AfkaraCode

./: .env.template  Cargo.toml  README.md
.direnv/: flake-profile-1-link
lua_tools/: http_example.lua
src/: config.rs  env.rs  lua.rs  main.rs  render.rs  tools.rs  utils.rs  xdg.rs
