[package]
name = "afkaracode"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openai-client = { git = "https://github.com/AfkaraLP/openai-client.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
