[package]
name = "afkaracode"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
dotenvy = "0.15.7"
openai-client = { git = "https://github.com/AfkaraLP/openai-client.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
colored = "2.1.0"
similar = "2.5.0"
syntect = { version = "5", default-features = false, features = ["parsing", "regex-onig", "default-syntaxes", "default-themes"] }
regex = "1"
mlua = { version = "0.9", features = ["lua54", "serialize", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
